--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -68,6 +68,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
 
+    # Terraform Cloud secret variable
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v1
